# beginner-ski-chatbot

./: .gcloudignore  .gitignore  Dockerfile  app.py  cloudbuild.yaml  index.html  main.py  pyproject.toml
evals/: conftest.py  test_golden.py  test_rubric.py  test_rules.py
